Fix width on smaller screens

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -50,7 +50,7 @@
     margin-bottom: 7.5rem;
   }
   p {
-    width: 50rem;
+    width: min(50rem, 90%);
   }
 }
 
